Make 'undo crafting' un-exploitable

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -2490,7 +2490,8 @@
     "workshop.titaniumWarehouses.desc": "Storage facilities store 50% more resources",
     "workshop.turnSmoothly.label": "Chronosurge",
     "workshop.turnSmoothly.desc": "Chronospheres will now generate temporal flux.",
-    "workshop.undo.msg": "{0} {1} refunded",
+    "workshop.undo.failure": "Some of the {0} was spent already, so nothing could be un-crafted.",
+    "workshop.undo.regain": "Regained {0} {1}.",
     "workshop.unicornSelection.label": "Unicorn Selection",
     "workshop.unicornSelection.desc": "Improves Unicorn Pasture effectiveness by 25%",
     "workshop.unobtainiumAxe.label": "Unobtainium Axe",
