Undo System Update (part 1) (#136)
* Add tooltip for undo button.

* Fix performance issue from creation of unneeded event listeners

* Clean up _transform to stop calling resPool.get so often

* Add log message for undo actions & add a log filter for it as well.

* Prevent undo of crafting that is performed by Workshop Automation

* Make 'undo crafting' un-exploitable

* Add undo for refining catnip in the Bonfire tab

* Add undo praise the sun

* Add undo build ziggurat building

* Add undo for building OOTS

* Add undo for selling OOTS

* Extend undo system to work with any manager

* Add undo for buying Embassies

* Modify logic for failed/bonus trades to accept a non-random parameter

* Add non-random trades, which are guaranteed to give an unfavorable outcome

* Reset nonRandomTrades when 45 game-days elapse

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1126,6 +1126,11 @@
     "religion.tu.singularity.label": "Event Horizon",
     "religion.tu.singularity.desc": "Improve global resource limits by 10%",
     "religion.tu.singularity.flavor": "A gateway... To what?",
+    "religion.undo.praise.regained": "Regained {0} faith.",
+    "religion.undo.praise.nogain": "The sun was successfully un-praised, however, no faith could be recovered.",
+    "religion.undo.praise.failure": "Unable to take back your praise. Nothing happens.",
+    "religion.undo.refine.complete": "The un-refining yielded {0} {1}.",
+    "religion.undo.refine.incomplete": "The refining could only be partially undone. Regained {0} {1}.",
     "religion.zu.blackPyramid.label": "Black Pyramid",
     "religion.zu.blackPyramid.desc": "A dark relic of unspeakable horrors.",
     "religion.zu.blackPyramid.flavor": "What have we done?!",
@@ -1771,6 +1776,7 @@
     "trade.embassy.pinned": "Pinned",
     "trade.embassy.unpinned": "Unpinned",
     "trade.embassy.open": "Open",
+    "trade.undo.missing": "Cannot undo the trade because {0} is missing.",
 
     "turnHGOff.confirmation.msg": "Are you sure you want to turn off Holy Genocide for this and future runs?",
 
@@ -1817,6 +1823,16 @@
     "ui.pause.title": "Pause/unpause the game",
     "ui.undo": "undo ({0}s)",
     "ui.undo.title": "Undo the change",
+    "ui.undo.bld.build": "Undo building {0}x {1}.",
+    "ui.undo.bld.downgrade": "Undo downgrading {0} into {1}.",
+    "ui.undo.bld.sell": "Undo selling {0}x {1}.",
+    "ui.undo.bld.upgrade": "Undo upgrading {0} into {1}.",
+    "ui.undo.diplomacy.build.one.embassy": "Undo building an Embassy ({0}).",
+    "ui.undo.diplomacy.build.many.embassies": "Undo building {0}x Embassies ({1}).",
+    "ui.undo.diplomacy.trade": "Undo trade x{0} with the {1}.",
+    "ui.undo.religion.praise": "Un-praise the sun for {0} worship.",
+    "ui.undo.religion.refine": "Undo refining {0} {1} into {2} {3}.",
+    "ui.undo.workshop.craft": "Undo crafting {0} {1}.",
     "ui.queue.link": "Queue",
 
     "ui.close": "close",
@@ -1901,6 +1917,7 @@
     "console.filter.elders": "Leviathans Arrival",
     "console.filter.blackcoin": "Blackcoin Transactions",
     "console.filter.festival": "Festivals",
+    "console.filter.undo": "Undo Action",
 
     "village.bonus.desc.chemist": "Chemical crafting bonus",
     "village.bonus.desc.engineer": "Crafting bonus",
@@ -2481,7 +2498,8 @@
     "workshop.titaniumWarehouses.desc": "Storage facilities store 50% more resources",
     "workshop.turnSmoothly.label": "Chronosurge",
     "workshop.turnSmoothly.desc": "Chronospheres will now generate temporal flux.",
-    "workshop.undo.msg": "{0} {1} refunded",
+    "workshop.undo.failure": "Some of the {0} was spent already, so nothing could be un-crafted.",
+    "workshop.undo.regain": "Regained {0} {1}.",
     "workshop.unicornSelection.label": "Unicorn Selection",
     "workshop.unicornSelection.desc": "Improves Unicorn Pasture effectiveness by 25%",
     "workshop.unobtainiumAxe.label": "Unobtainium Axe",
